Fixed the logo position and changed the live life posotion for proper visibility

--- a/Alien.css
+++ b/Alien.css
@@ -52,8 +52,8 @@ body {
 
 #gameInfo {
   position: absolute;
-  top: 80px;
-  left: 100px; /* Adjust this value to align with the shifted game content */
+  top: 180px;
+  left: 130px; /* Adjust this value to align with the shifted game content */
   font-size: 18px;
   background-color: rgba(20, 19, 19, 0.7);
   padding: 5px 10px;
@@ -67,18 +67,20 @@ a{
 }
 .logo {
   position: absolute;
-  top: -40px;
-  left: -30px;
-  width: 140px;
+  top: 3px;
+  left: 10px;
+  width: 190px;
   height: 120px;
   margin: 20px;
+  transition: ease-out;
   display: inline-block;
 }
 
 
 .logo:hover {
-  opacity: 0.8;
-  transition: opacity 0.3s;
+  opacity: 1;
+  transition: ease-out;
+  transition: opacity 1s;
 }
 
 #startButton,
@@ -868,7 +870,7 @@ input:checked + .slider:before {
 }
 #liveLife {
   position: absolute;
-  top: 42px;
+  top: 150px;
   left: 134px;
   font-size: 20px;
   font-weight: bold;
@@ -879,6 +881,7 @@ input:checked + .slider:before {
 
 
 .sidebar {
+  
   background-color: grey;
   height: 100%;
   gap: 10px;
